@@ -64,6 +64,7 @@ test/dummy_bme
 test/processwdtest
 test/testmod_alarmtracker
 test/testmod_state
+test/testmod_usbtracker
 
 m4/
 util/bootstate
